--- a/2- myfinance-web-netcore-service/myfinance-web-netcore-service.csproj
+++ b/2- myfinance-web-netcore-service/myfinance-web-netcore-service.csproj
@@ -1,17 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <RootNamespace>myfinance_web_netcore_service</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>myfinance_web_netcore</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="..\2- myfinance-web-netcore-service\myfinance-web-netcore-service.csproj"/>
     <ProjectReference Include="..\3- myfinance-web-netcore-domain\myfinance-web-netcore-domain.csproj"/>
     <ProjectReference Include="..\4- myfinance-web-netcore-infra\myfinance-web-netcore-infra.csproj"/>
   </ItemGroup>
-
-
 </Project>
