--- a/4- myfinance-web-netcore-infra/myfinance-web-netcore-infra.csproj
+++ b/4- myfinance-web-netcore-infra/myfinance-web-netcore-infra.csproj
@@ -2,9 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>myfinance_web_netcore_service</RootNamespace>
+    <RootNamespace>myfinance_web_netcore_infra</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  
+  <ItemGroup>
+    <ProjectReference Include="..\3- myfinance-web-netcore-domain\myfinance-web-netcore-domain.csproj"/>
+</ItemGroup>
 
 </Project>
