--- a/4- myfinance-web-netcore-infra/myfinance-web-netcore-infra.csproj
+++ b/4- myfinance-web-netcore-infra/myfinance-web-netcore-infra.csproj
@@ -9,7 +9,13 @@
 
   
   <ItemGroup>
-    <ProjectReference Include="..\3- myfinance-web-netcore-domain\myfinance-web-netcore-domain.csproj"/>
+    <ProjectReference Include="..\3- myfinance-web-netcore-domain\myfinance-web-netcore-domain.csproj" />
 </ItemGroup>
+
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.6.24327.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.6.24327.4" />
+  </ItemGroup>
 
 </Project>
